# blockChainFullStack

./: .env.example  .gitignore  LICENSE  README.md  gunicorn_conf.py  package-lock.json  pyproject.toml
app/: main.py
app/api/v1/endpoints/: bitcoin.py  chat.py  kyc.py  liveness.py  market.py  market_report.py  security.py  support.py  trading.py  wallet.py
app/core/: cache.py  config.py  database.py
app/models/: kyc.py  liveness.py  market.py  market_report.py  risk.py  security.py  social.py  support.py  trading.py  user.py  wallet.py
app/schemas/: base.py  liveness.py  user.py  wallet.py
app/services/: cache.py  kyc.py  liveness.py  market.py  market_report.py  matching.py  risk.py  security.py  support.py  trading_bot.py  wallet.py  websocket.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/components/charts/: OrderBookChart.tsx  PriceChart.tsx  VolumeChart.tsx  config.ts  index.ts
frontend/src/components/layout/: Footer.tsx  MainLayout.tsx  Navbar.tsx
frontend/src/hooks/: useAuth.tsx  useWebSocket.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: login.tsx  support.tsx  trading.tsx  wallet.tsx
