[tool.poetry]
name = "crypto-explorer"
version = "1.0.0"
description = "A comprehensive cryptocurrency application built with FastAPI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
tortoise-orm = "^0.20.0"
aerich = "^0.7.1"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
ccxt = "^4.1.13"
pandas = "^2.1.3"
numpy = "^1.26.2"
python-binance = "^1.0.19"
redis = "^5.0.1"
hiredis = "^2.3.2"
fastapi-cache2 = "^0.2.1"
gunicorn = "^21.2.0"
uvicorn[standard] = "^0.24.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 